# sft-gen

./: README.md  pyproject.toml
examples/: stocks_grouping.py
src/sft_gen/: config.py
src/sft_gen/nlp_resources/: groupings.py  parsing.py
