[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sft-gen"
version = "0.1.0"
dependencies = [
  "sentence-transformers",
  "nltk"
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "isort", "pytest", "pytest-cov"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.isort]
profile = "black"
